[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "pecapiku"
version = "0.0.1"
authors = [
  { name="Peter Shevchenko", email="petroochcho@gmail.com" },
]
description = "Persistent cache pickling utility"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MorrisNein/pecapiku"
"Bug Tracker" = "https://github.com/MorrisNein/pecapiku/issues"
